# plainpydoc2md

./: README.md  plainpydoc2md.py  pyproject.toml
testInputs/: testfile.py
